Updated the portfolio past educatin skills details

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
       <div class="row">
         <div class="col-md-6">
           <div class="resume-wrap ftco-animate">
-            <span class="date">2023-Present</span>
+            <span class="date">2023-Past</span>
             <h2>Software Developer</h2>
             <span class="position">**TechFusion Solutions**</span>
             <p class="mt-4">TechFusion Solutions a leading Indian IT company, specializes in web applications,
