updating the add some skills and modify languages

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target" id="ftco-navbar">
     <div class="container">
-      <a class="navbar-brand" href="index.html" style="color: rgb(252, 183, 253);">MD SAFDAR ANSARI</a>
+      <a class="navbar-brand" href="index.html" style="color: rgb(252, 183, 253);">Er.SAFDAR ANSARI</a>
       <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse"
         data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="oi oi-menu"></span>
@@ -264,50 +264,69 @@
 
                 <div class="skill-mf">
                   <p class="title-s">Skills</p>
-                  <span>Java</span>
-                  <!-- <span class="pull-right">85%</span> -->
-                  <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="85" aria-valuemin="0"
-                      aria-valuemax="100"></div>
-                  </div>
+                  
                   <span>REACT</span>
                   <!-- <span class="pull-right">99%</span> -->
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="90" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
 
                   <span>Javascript</span>
                   <!-- <span class="pull-right">99%</span> -->
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 64%" aria-valuenow="64" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
 
                   <span>HTML</span>
                   <!-- <span class="pull-right">99%</span> -->
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 90%" aria-valuenow="80" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 79%" aria-valuenow="79" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
                   <span>CSS</span>
                   <!-- <span class="pull-right">99%</span> -->
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 95%" aria-valuenow="80" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 62%" aria-valuenow="62" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
 
                   <span>SQL</span>
                   <!-- <span class="pull-right">95%</span> -->
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="95"
+                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60"
                       aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
-
-                  <span>PYTHON</span>
+                  <span>Java</span>
                   <!-- <span class="pull-right">85%</span> -->
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="85" aria-valuemin="0"
+                    <div class="progress-bar" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+
+                  <span>Node.js</span>
+                  <!-- <span class="pull-right">85%</span> -->
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 48%" aria-valuenow="48" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>MySQL</span>
+                  <!-- <span class="pull-right">85%</span> -->
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 68%" aria-valuenow="68" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>Express.js</span>
+                  <!-- <span class="pull-right">85%</span> -->
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 32%" aria-valuenow="32" aria-valuemin="0"
+                      aria-valuemax="100"></div>
+                  </div>
+                  <span>WordPress</span>
+                  <!-- <span class="pull-right">85%</span> -->
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 58%" aria-valuenow="58" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
 
@@ -355,50 +374,54 @@
                   </li>
                   <li>
 
-                  
-                  <span>Other Skills:</span>
-                  <ul>
-                    <li>
-                      <b>Observational Skills:</b> "Demonstrated strong observational skills by consistently identifying
-                      and analyzing intricate details in projects, leading to high-quality outcomes."
-                    </li>
-                    <li>
-                      <b>Creativity:</b> "Leveraged creativity to develop innovative solutions and unique designs that
-                      exceeded client expectations."
-                    </li>
-                    <li>
-                      <b>Knowledge of Art Fundamentals:</b> "Applied deep knowledge of art fundamentals, including color
-                      theory and composition, to create visually compelling and well-structured designs."
-                    </li>
-                    <li>
-                      <b>Technical Proficiency:</b> "Utilized technical proficiency in [specific tools or software] to
-                      efficiently execute and deliver complex tasks with precision."
-                    </li>
-                    <li>
-                      <b>Communication Skills:</b> "Exhibited excellent communication skills by clearly articulating
-                      ideas and collaborating effectively with cross-functional teams."
-                    </li>
-                    <li>
-                      <b>Time Management:</b> "Effectively managed time to balance multiple projects, ensuring all
-                      deadlines were met without compromising quality."
-                    </li>
-                    <li>
-                      <b>Adaptability:</b> "Adapted quickly to new tools, techniques, and feedback, maintaining a high
-                      level of performance in dynamic environments."
-                    </li>
-                    <li>
-                      <b>Attention to Detail:</b> "Demonstrated meticulous attention to detail, ensuring accuracy and
-                      consistency across all aspects of project work."
-                    </li>
-                  </ul>
-                </li>
+
+                    <span>Other Skills:</span>
+                    <ul>
+                      <li>
+                        <b>Observational Skills:</b> "Demonstrated strong observational skills by consistently
+                        identifying
+                        and analyzing intricate details in projects, leading to high-quality outcomes."
+                      </li>
+                      <li>
+                        <b>Creativity:</b> "Leveraged creativity to develop innovative solutions and unique designs that
+                        exceeded client expectations."
+                      </li>
+                      <li>
+                        <b>Knowledge of Art Fundamentals:</b> "Applied deep knowledge of art fundamentals, including
+                        color
+                        theory and composition, to create visually compelling and well-structured designs."
+                      </li>
+                      <li>
+                        <b>Technical Proficiency:</b> "Utilized technical proficiency in [specific tools or software] to
+                        efficiently execute and deliver complex tasks with precision."
+                      </li>
+                      <li>
+                        <b>Communication Skills:</b> "Exhibited excellent communication skills by clearly articulating
+                        ideas and collaborating effectively with cross-functional teams."
+                      </li>
+                      <li>
+                        <b>Time Management:</b> "Effectively managed time to balance multiple projects, ensuring all
+                        deadlines were met without compromising quality."
+                      </li>
+                      <li>
+                        <b>Adaptability:</b> "Adapted quickly to new tools, techniques, and feedback, maintaining a high
+                        level of performance in dynamic environments."
+                      </li>
+                      <li>
+                        <b>Attention to Detail:</b> "Demonstrated meticulous attention to detail, ensuring accuracy and
+                        consistency across all aspects of project work."
+                      </li>
+                    </ul>
+                  </li>
                 </ul>
               </div>
             </div>
 
             <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-                <!-- <p class="mb-4"> <span class="number" data-number="30">0</span> <span>+</span> <span>&nbsp; Projects completed</span> </p> -->
+
+                <p class="mb-4"> <span class="number" data-number="32">0</span> <span>+</span> <span>&nbsp; Projects completed</span> </p>
+
                 <p>
                   <a href="https://www.linkedin.com/in/md-safdar-ansari/" class="btn btn-primary py-3 px-3">LinkedIn</a>
                 </p>
@@ -693,7 +716,6 @@
           <ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
             <li class="ftco-animate normal-txt">Find me on
             </li>
-            <!-- <li class="ftco-animate"> <a href="https://www.youtube.com/@RishabhMishraOfficial"> <span class="icon-youtube"></span></a> </li> -->
             <li class="ftco-animate">
               <a href="https://www.linkedin.com/md-safdar-ansari/">
                 <span class="icon-linkedin"></span></a>
@@ -702,7 +724,12 @@
               <a href="https://x.com/safdar_18?s=09">
                 <span class="icon-twitter"></span></a>
             </li>
-            <!-- <li class="ftco-animate"> <a href="#"> <span class="icon-facebook"></span></a> </li> -->
+            <li class="ftco-animate">
+              <a href="https://www.facebook.com/md.safdarraza.14?mibextid=ZbWKwL">
+                <span class="icon-facebook">
+                </span>
+              </a>
+            </li>
             <li class="ftco-animate">
               <a href="https://www.instagram.com/safdar___18/">
                 <span class="icon-instagram"></span></a>
@@ -719,7 +746,6 @@
         <div class="col-md-12 text-center">
 
           <p style="display: none;">
-            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             Copyright &copy;
             <script>
               document.write(new Date().getFullYear());
