--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
                 <div class="skill-mf">
                   <p class="title-s">Skills</p>
-                  
+
                   <span>REACT</span>
                   <!-- <span class="pull-right">99%</span> -->
                   <div class="progress">
@@ -420,7 +420,8 @@
             <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
 
-                <p class="mb-4"> <span class="number" data-number="32">0</span> <span>+</span> <span>&nbsp; Projects completed</span> </p>
+                <p class="mb-4"> <span class="number" data-number="32">0</span> <span>+</span> <span>&nbsp; Projects
+                    completed</span> </p>
 
                 <p>
                   <a href="https://www.linkedin.com/in/md-safdar-ansari/" class="btn btn-primary py-3 px-3">LinkedIn</a>
@@ -785,7 +786,7 @@
   <script src="js/main.js"></script>
   <script>
     function gitClick() {
-      window.location.href = 'https://github.com/anuragdevnath';
+      window.location.href = 'https://github.com/iamsafdarAnsari';
     }
   </script>
 
