update github link

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
                 <!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
                 <!-- <br> -->
                 <p>
-                  <a href="https://www.instagram.com/safdar___18/" class="btn btn-primary py-3 px-4">My Instagram</a>
-                  <a href="https://www.linkedin.com/in/md-safdar-ansari/"
+                  <a href="https://github.com/iamSafdarAnsari" class="btn btn-primary py-3 px-4">My GitHub</a>
+                  <a href="https://www.linkedin.com/in/iamsafdaransari/"
                     class="btn btn-white btn-outline-white py-3 px-4">My Linkedin</a>
                 </p>
               </div>
@@ -378,38 +378,28 @@
                     <span>Other Skills:</span>
                     <ul>
                       <li>
-                        <b>Observational Skills:</b> "Demonstrated strong observational skills by consistently
-                        identifying
-                        and analyzing intricate details in projects, leading to high-quality outcomes."
+                        <b>Observational Skills:</b>
                       </li>
                       <li>
-                        <b>Creativity:</b> "Leveraged creativity to develop innovative solutions and unique designs that
-                        exceeded client expectations."
+                        <b>Creativity:</b>
                       </li>
                       <li>
-                        <b>Knowledge of Art Fundamentals:</b> "Applied deep knowledge of art fundamentals, including
-                        color
-                        theory and composition, to create visually compelling and well-structured designs."
+                        <b>Knowledge of Art Fundamentals:</b>
                       </li>
                       <li>
-                        <b>Technical Proficiency:</b> "Utilized technical proficiency in [specific tools or software] to
-                        efficiently execute and deliver complex tasks with precision."
+                        <b>Technical Proficiency:</b>
                       </li>
                       <li>
-                        <b>Communication Skills:</b> "Exhibited excellent communication skills by clearly articulating
-                        ideas and collaborating effectively with cross-functional teams."
+                        <b>Communication Skills:</b>
                       </li>
                       <li>
-                        <b>Time Management:</b> "Effectively managed time to balance multiple projects, ensuring all
-                        deadlines were met without compromising quality."
+                        <b>Time Management:</b>
                       </li>
                       <li>
-                        <b>Adaptability:</b> "Adapted quickly to new tools, techniques, and feedback, maintaining a high
-                        level of performance in dynamic environments."
+                        <b>Adaptability:</b>
                       </li>
                       <li>
-                        <b>Attention to Detail:</b> "Demonstrated meticulous attention to detail, ensuring accuracy and
-                        consistency across all aspects of project work."
+                        <b>Attention to Detail:</b>
                       </li>
                     </ul>
                   </li>
