--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                     completed</span> </p>
 
                 <p>
-                  <a href="https://www.linkedin.com/in/md-safdar-ansari/" class="btn btn-primary py-3 px-3">LinkedIn</a>
+                  <a href="https://www.linkedin.com/in/iamsafdaransari/" class="btn btn-primary py-3 px-3">LinkedIn</a>
                 </p>
               </div>
             </div>
@@ -530,7 +530,7 @@
         <div class="col-md-6 text-center ftco-animate">
           <p>
             <!-- Here put the out CV -->
-            <a href="#" class="btn btn-primary py-4 px-5">Download CV</a>
+            <a href="images/Resume_Md Safdar Ansari CV.pdf" class="btn btn-primary py-4 px-5">Download CV</a>
           </p>
         </div>
       </div>
