update the cv  edit

--- a/index.html
+++ b/index.html
@@ -530,7 +530,8 @@
         <div class="col-md-6 text-center ftco-animate">
           <p>
             <!-- Here put the out CV -->
-            <a href="images/Resume_Md Safdar Ansari CV.pdf" class="btn btn-primary py-4 px-5">Download CV</a>
+            <a href="images/Resume_Md Safdar Ansari CV.pdf" class="btn btn-primary py-4 px-5" target="_blank"
+              download="CV.pdf">Download CV</a>
           </p>
         </div>
       </div>
