update the course details and some changes for position of the element

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                   const typingAnimationElement = document.getElementById('typing-animation');
 
                   // Create an array of typing text
-                  const typingTexts = ['Software Developer     ', 'Webside Devloper    ', 'Freelancer Artist     ', 'Video Editor    '];
+                  const typingTexts = ['Software Developer', 'MERN Stack Developer', 'Freelancer Artist', 'Video Editor '];
 
                   // Create a function to display the typing animation for a given text
                   function playTypingAnimation(text) {
@@ -409,12 +409,7 @@
 
             <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
-
-                <p class="mb-4"> <span class="number" data-number="32">0</span> <span>+</span> <span>&nbsp; Projects
-                    completed</span> </p>
-
-                <p>
-                  <a href="https://www.linkedin.com/in/iamsafdaransari/" class="btn btn-primary py-3 px-3">LinkedIn</a>
+                <a href="https://www.linkedin.com/in/iamsafdaransari/" class="btn btn-primary py-3 px-3">LinkedIn</a>
                 </p>
               </div>
             </div>
@@ -440,7 +435,7 @@
       </div>
 
       <div class="row">
-        <h1 class="big-4">Experience</h1>
+        <h1 class="big-4"><b>Projects</b></h1>
         <div class="underline"></div>
       </div>
       <br>
@@ -448,23 +443,23 @@
       <div class="row">
         <div class="col-md-6">
           <div class="resume-wrap ftco-animate">
-            <span class="date">2023-Past</span>
-            <h2>Software Developer</h2>
-            <span class="position">**TechFusion Solutions**</span>
-            <p class="mt-4">TechFusion Solutions a leading Indian IT company, specializes in web applications,
-              e-Learning platforms, media solutions, and design services. We develop custom software solutions tailored
-              to enhance functionality and productivity across various industries. Our mission is to deliver innovative
-              technology solutions that drive efficiency and growth for our clients.
+            <span class="date">2024-Present</span>
+            <h2>Institutes Management App
+            </h2>
+            <span class="position">
+              All-in-One Platform for Managing Apps</span>
+            <p class="mt-4">The Institutes Management App enables educational institutions to efficiently manage student
+              enrollment, course materials, and staff data. Using MongoDB Atlas for cloud storage, Cloudinary for secure
+              image uploads, and Node.js with Express for RESTful APIs, the React.js frontend offers seamless form
+              handling and real-time updates using Formik and axios.
             <ul>
-              <li>Custom Software Development: Tailoring solutions to meet specific client needs and enhance operational
-                efficiency.
+
+              <li><b>User Roles:</b> Admin, teachers, and students with role-based functionalities.
               </li>
-              <li>User-Centric Design: Our focus is on creating intuitive and engaging user experiences, ensuring that
-                our software meets the needs and expectations of end-users.</li>
-              <li> IT Consulting and Support: Providing expert advice and ongoing support to optimize technology
-                strategies and systems.</li>
-              <li> Web and Mobile Applications: Creating robust and scalable applications for various platforms,
-                ensuring a seamless user experience.</li>
+              <li><b>Student & Course Management:</b> Enrollment, attendance, and course material uploads..</li>
+              <li> <b>Communication:</b> Messaging, notifications, and announcements.</li>
+              <li><b> Assessment:</b> Quizzes, exams, grading, and feedback.</li>
+              <li><b>Technology Stack:</b> React, Node.js, MongoDB Atlas, Cloudinary, JWT authentication.</li>
             </ul>
             </p>
           </div>
@@ -473,28 +468,33 @@
 
         <div class="col-md-6">
           <div class="resume-wrap ftco-animate">
-            <span class="date">2024-Present</span>
-            <h2>MERN Stack Developer </h2>
-            <span class="position">**CodeCatalyst Technologies**</span>
-            <p class="mt-4">**CodeCatalyst Technologies** is a prominent Indian IT company specializing in MERN stack
-              development. We focus on building dynamic and scalable web applications using MongoDB, Express.js, React,
-              and Node.js. Our expertise lies in delivering cutting-edge solutions that drive business growth and
-              enhance user experience. At CodeCatalyst Technologies, we are dedicated to leveraging the MERN stack to
-              create efficient, high-performance applications tailored to meet the unique needs of our clients.
+            <span class="date">2024</span>
+            <h2>E-Commerce Web Application</h2>
+            <span class="position">Comprehensive E-Commerce Web Application for Seamless Online Shopping</span>
+            <p class="mt-4">The E-Commerce Web Application provides a seamless platform for online shopping, handling
+              user authentication, product management, and secure payments. Featuring a responsive design, integrated
+              payment gateways, and a recommendation system, it ensures a smooth and efficient experience for both
+              customers and administrators.
             <ul>
-              <li>Scalable Solutions: Specializes in building high-performance web applications using MongoDB,
-                Express.js, React, and Node.js, ensuring robust and scalable solutions.</li>
-              <li>Dynamic User Interfaces: Focuses on creating responsive and interactive user interfaces with React,
-                enhancing user engagement and experience.</li>
-              <li>Full-Stack Expertise: Provides end-to-end development services from database management (MongoDB) to
-                server-side development (Node.js) and frontend implementation (React), streamlining the development
-                process.</li>
+              <li><b>User Authentication:</b>Secure login and profile management.</li>
+              <li><b>Product Management:</b>Catalog with sorting and filtering options.</li>
+              <li><b>Shopping Cart & Checkout:</b>Streamlined cart and secure payments.</li>
+              <li><b>Order Management:</b>Real-time tracking and admin panel for inventory.</li>
+              <li><b>Payment Gateway Integration:</b>Secure transactions via Stripe, PayPal, etc.</li>
 
             </ul>
             </p>
           </div>
+          <div class="counter-wrap ftco-animate d-flex mt-md-3">
+            <div class="text">
 
+              <p class="mb-4"> <span class="number" data-number="32">0</span> <span>+</span> <span>&nbsp;
+                  Projects
+                  completed</span> </p>
+            </div>
+          </div>
         </div>
+
       </div>
 
       <br>
@@ -531,7 +531,7 @@
           <p>
             <!-- Here put the out CV -->
             <a href="images/Resume_Md Safdar Ansari CV.pdf" class="btn btn-primary py-4 px-5" target="_blank"
-              download="CV.pdf">Download CV</a>
+              download="CV_safdar.pdf">Download CV</a>
           </p>
         </div>
       </div>
@@ -544,7 +544,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="20">0</strong>
+                <strong class="number" data-number="7">0</strong>
                 <span>Achievements</span>
               </div>
             </div>
@@ -632,7 +632,7 @@
             <h3 class="mb-4">Download Resume</h3>
             <p>
               <!-- put the prosnol remume link here # -->
-              <a href="#">resumelink</a>
+              <a href="images/Resume_Md Safdar Ansari CV.pdf">resumelink</a>
             </p>
           </div>
         </div>
