Updated About Me, Skills,and intership details and Interests section

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                   const typingAnimationElement = document.getElementById('typing-animation');
 
                   // Create an array of typing text
-                  const typingTexts = ['Software Developer', 'MERN Stack Developer', 'Freelancer Artist', 'Video Editor '];
+                  const typingTexts = ['Software Developer', 'MERN Stack Developer', 'Freelancer Artist', 'Video Editor ','Generative AI Developer'];
 
                   // Create a function to display the typing animation for a given text
                   function playTypingAnimation(text) {
@@ -250,7 +250,12 @@
                       <p>
                         <span class="title-s">Job Role:
                         </span>
-                        <span style="color:rgb(207, 129, 129);">MERN Developer</span>
+                        <span style="color:rgb(207, 129, 129);">Generative AI & MERN Stack Developer</span>
+                      </p>
+                      <p>
+                        <span class="title-s">Intership:
+                        </span>
+                        <span style="color:rgb(207, 129, 129);">@DataPattern.ai </span>
                       </p>
                       <p>
                         <!-- <span class="title-s">Experience: </span> <span>5 Years 3 Months</span></p> <p> -->
@@ -329,9 +334,6 @@
                     <div class="progress-bar" role="progressbar" style="width: 58%" aria-valuenow="58" aria-valuemin="0"
                       aria-valuemax="100"></div>
                   </div>
-
-
-
                 </div>
               </div>
             </div>
@@ -343,14 +345,23 @@
 
                 <h1 class="big">About</h1>
                 <h2 class="mb-4">About Me</h2>
-                <p>I'm Safdar, and I'm from Bihar. I have completed my high school and higher secondary school in
-                  Purnea, and I hold a B.E. in Computer Science Engineering. One of my strengths is watching movies,
-                  which I enjoy as it helps me relax and gain new perspectives. In my free time, I love playing cricket,
-                  which keeps me active and fosters teamwork and discipline.
-                  I am skilled in MERN development, which includes MongoDB, Express.js, React, and Node.js. My
-                  short-term goal is to secure a job in the IT industry, where I can utilize my skills and contribute to
-                  meaningful projects. In the long run, I aspire to start my own IT company, providing innovative
-                  technology solutions..</p>
+                <p>
+                  Hey there! I’m Safdar — a creative and curious Full-Stack Web Developer and an aspiring AI Innovator
+                  from Bihar, India. With a B.E. in Computer Science Engineering, I bring a solid foundation in software
+                  development along with a growing passion for building intelligent, future-ready solutions. I
+                  specialize in the MERN Stack (MongoDB, Express.js, React, Node.js), crafting fast, scalable, and
+                  user-centric web applications that bridge the gap between design and functionality. Recently, I’ve
+                  been exploring the cutting-edge realm of agentive AI, where I build smart systems that not only
+                  respond but also take initiative. Using tools like Gradio, Gemini API, and Databricks, I’ve developed
+                  interactive chatbots and AI-driven experiences that feel truly alive. Outside of tech, I enjoy
+                  watching movies to unwind and playing cricket to stay active and sharpen my teamwork skills. I’m
+                  deeply goal-oriented and always excited to contribute to innovative, impact-driven teams. Whether it’s
+                  deploying secure web applications or experimenting with LLMs and prompt engineering, I’m constantly
+                  learning, building, and pushing the boundaries of what’s possible. Explore my portfolio to see what
+                  I’ve created so far — and let’s build something amazing together!
+                </p>
+
+
                 <ul class="about-info mt-4 px-md-0 px-2">
                   <li class="d-flex">
                     <span>Profile:</span>
@@ -358,7 +369,7 @@
                   </li>
                   <li class="d-flex">
                     <span>Domain:</span>
-                    <span>MERN Developer</span>
+                    <span>Generative AI & MERN Developer</span>
                   </li>
                   <li class="d-flex">
                     <span>Education:</span>
@@ -369,39 +380,18 @@
                     <span>English, Hindi,Urdu </span>
                   </li>
                   <li class="d-flex">
-                    <span>Interest:</span>
+                    <span><strong>Interests:</strong></span>
                     <span>Traveling, Travel Photography, Teaching, Editing</span>
                   </li>
+
                   <li>
+                    <span><strong>Other Skills:</strong></span>
+                    <span>
+                      Observational Skills, Creativity, Knowledge of Art Fundamentals, Technical Proficiency,
+                      Communication Skills, Time Management, Adaptability, Attention to Detail
+                    </span>
+                  </li>
 
-
-                    <span>Other Skills:</span>
-                    <ul>
-                      <li>
-                        <b>Observational Skills:</b>
-                      </li>
-                      <li>
-                        <b>Creativity:</b>
-                      </li>
-                      <li>
-                        <b>Knowledge of Art Fundamentals:</b>
-                      </li>
-                      <li>
-                        <b>Technical Proficiency:</b>
-                      </li>
-                      <li>
-                        <b>Communication Skills:</b>
-                      </li>
-                      <li>
-                        <b>Time Management:</b>
-                      </li>
-                      <li>
-                        <b>Adaptability:</b>
-                      </li>
-                      <li>
-                        <b>Attention to Detail:</b>
-                      </li>
-                    </ul>
                   </li>
                 </ul>
               </div>
@@ -425,12 +415,18 @@
         <div class="col-md-10 heading-section text-center ftco-animate">
           <h1 class="big big-2">Resume</h1>
           <h2 class="mb-4">Resume</h2>
-          <p>I hold a B.E. in Computer Science Engineering. One of my strengths is watching movies, which I enjoy as it
-            helps me relax and gain new perspectives. In my free time, I love playing cricket, which keeps me active and
-            fosters teamwork and discipline.
-            I am skilled in MERN development, which includes MongoDB, Express.js, React, and Node.js. My short-term goal
-            is to secure a job in the IT industry, where I can utilize my skills and contribute to meaningful projects.
-            In the long run, I aspire to start my own IT company, providing innovative technology solutions..</p>
+          <p>I hold a B.E. in Computer Science Engineering and am a passionate Full-Stack Web Developer with a strong
+            command of the MERN stack — MongoDB, Express.js, React, and Node.js. Beyond development, I’m also exploring
+            the field of Artificial Intelligence, with hands-on experience in agentive AI systems, LLM integration, and
+            tools like Gradio, Gemini API, and Databricks. I’ve built intelligent chatbots and interactive platforms
+            that reflect my interest in merging smart systems with user-friendly design. Watching movies is one of my
+            favorite ways to relax and gain creative perspective, while playing cricket keeps me active, focused, and
+            sharpens my teamwork. I’m adaptable, detail-oriented, and always eager to learn new technologies. My
+            short-term goal is to secure a role in a forward-thinking IT or AI company where I can grow and contribute
+            meaningfully. In the long run, I aspire to launch my own tech company, delivering AI-powered, innovative
+            solutions to real-world problems.
+
+          </p>
         </div>
       </div>
 
@@ -441,9 +437,63 @@
       <br>
 
       <div class="row">
+
+
         <div class="col-md-6">
           <div class="resume-wrap ftco-animate">
-            <span class="date">2024-Present</span>
+            <span class="date">JULY 2025</span>
+            <h2> ExcelAssistAI</h2>
+            <span class="position">AI-Powered Chatbot for College Admission Support</span>
+            <p class="mt-4">
+              ExcelAssistAI is a Generative AI-based chatbot designed to assist students and parents with real-time
+              responses to admission-related queries for Excel Engineering College. Built using Gradio and the Gemini
+              API, the bot offers a user-friendly interface and is publicly hosted on <a
+                href="https://huggingface.co/spaces/mdsafdaransari/ExcelAssistAI" target="_blank"
+                rel="noopener noreferrer">Hugging Face Spaces</a>.
+            </p>
+            <ul>
+              <li><b>Conversational Assistant:</b> Handles admission FAQs, course details, and general college info.
+              </li>
+              <li><b>Natural Language Understanding:</b> Uses Google’s Gemini for contextual and intelligent replies.
+              </li>
+              <li><b>Deployment:</b> Hosted publicly on <a
+                  href="https://huggingface.co/spaces/mdsafdaransari/ExcelAssistAI" target="_blank"
+                  rel="noopener noreferrer">Hugging Face Spaces</a> for easy access and usage.</li>
+              <li><b>User Interface:</b> Interactive Gradio-based frontend for both desktop and mobile users.</li>
+              <li><b>Technology Stack:</b> Python, Gradio, Google Generative AI (Gemini), Hugging Face.</li>
+              <li><b>Live-visit : </b> <a href="https://huggingface.co/spaces/mdsafdaransari/ExcelAssistAI"
+                  target="_blank" rel="noopener noreferrer">ExcelAssistAI</a></li>
+            </ul>
+          </div>
+        </div>
+
+
+        <div class="col-md-6">
+          <div class="resume-wrap ftco-animate">
+            <span class="date">2025</span>
+            <h2>College Shuttles Tracking App (X-Link)</h2>
+            <span class="position">Real-Time Vehicle Tracking System for Campus Commute</span>
+            <p class="mt-4">
+              The College Shuttles Tracking App (X-Link) is designed to provide real-time tracking of college shuttles,
+              enhancing convenience and safety for students and staff. Built with a mobile-friendly interface and GPS
+              integration, the app offers live location updates, estimated arrival times, and shuttle route visibility.
+            </p>
+            <ul>
+              <li><b>Live Location Tracking:</b> Real-time GPS tracking of shuttle movement on a map.</li>
+              <li><b>Estimated Arrival Times:</b> Display of shuttle ETAs to reduce waiting time.</li>
+              <li><b>User-Friendly Interface:</b> Responsive UI for both web and mobile platforms.</li>
+              <li><b>Admin Dashboard:</b> Manage shuttle data, routes, and schedules efficiently.</li>
+              <li><b>Notifications:</b> Alerts for shuttle arrival, delays, or schedule changes.</li>
+              <li><b>GitHub :</b> <a href="https://github.com/iamSafdarAnsari/Xlink" target="_blank"
+                  rel="noopener noreferrer">Xlink</a></li>
+            </ul>
+          </div>
+        </div>
+
+
+        <div class="col-md-6">
+          <div class="resume-wrap ftco-animate">
+            <span class="date">2024-2025</span>
             <h2>Institutes Management App
             </h2>
             <span class="position">
@@ -460,10 +510,12 @@
               <li> <b>Communication:</b> Messaging, notifications, and announcements.</li>
               <li><b> Assessment:</b> Quizzes, exams, grading, and feedback.</li>
               <li><b>Technology Stack:</b> React, Node.js, MongoDB Atlas, Cloudinary, JWT authentication.</li>
+              <li><b>Live-visit : </b> <a href="https://academyzone.vercel.app/login" target="_blank"
+                  rel="noopener noreferrer">AcademyZone App</a></li>
+
             </ul>
             </p>
           </div>
-
         </div>
 
         <div class="col-md-6">
@@ -512,7 +564,7 @@
             <span class="date">2022-2026</span>
             <h2>Bachelor of Computer Science</h2>
             <span class="position">Excel Engineering College</span>
-            <p class="mt-4">Grade: CGPA - 9.2</p>
+            <p class="mt-4">Grade: CGPA - 8.1</p>
           </div>
         </div>
 
@@ -567,7 +619,8 @@
       <div class="row justify-content-center">
         <div class="col-md-7 ftco-animate text-center">
           <h2>Here's my<span>
-              <button id="gitbtn" class="btn btn-primary py-3 px-5" onclick="gitClick()">GitHub<button>
+              <button id="gitbtn" class="btn btn-primary py-3 px-5" onclick="gitClick()"
+                title="Visit my GitHub profile">GitHub</button>
             </span>
           </h2>
           <div class="heading">
